1.1.6-devel unreleased
=======================


1.1.5-final 2007-04-28
======================

 * http://dev.plone.org/plone/ticket/6481: During event post_validate, don't
   attempt to parse the startDate and endDate form fields when validation
   already found errors for them.
   [mj]

 * Adjusted tests to deal with the new default vocabulary for boolean fields.
   [wichert]

 * removed schemata='default' for allowDiscussion field in finalizeATCTSchema.
   It makes no sense and prevents customization by patching.
   [ender]

1.1.4-final 2006-12-18
======================

 * Reenabled editing the names and descriptions of the smart folder indices
   and metadata.
   [alecm]

 * Setting a sort criterion should not prevent search criteria for the same
   field from being set.  Fixes http://dev.plone.org/plone/ticket/5435
   [alecm]

 * ATEvent.setSubject needs to set multiple EventTypes to avoid pruning
   the subject list.  Applied patch from rossp.  Fixes
   http://dev.plone.org/plone/ticket/5770
   [alecm]

 * Add alt attributes to Topic table view type icons.  This closes
   http://dev.plone.org/plone/ticket/5562
   [alecm]

 * Fixed validation of filenames uploaded from IE.  This closes
   http://dev.plone.org/plone/ticket/5889.
   [alecm]

 * Reenabled translation of AJAX-ified smart folder info. This closes
   http://dev.plone.org/plone/ticket/5806.
   [hannosch]

 * Got rid of last remnants of zLOG. Grep is our friend!
   [stefan]

 * Added a relative path criterion for Smart Folders to allow search paths
   like "../somefolder"
   [ender, elvix] 

1.1.3-final 2006-09-20
======================

 * Disabled translation of AJAX-ified smart folder info to temporarily remedy
   http://dev.plone.org/plone/ticket/5806
   [jensens]

1.1.2-final 2006-09-11
======================
 * Changed integration tests to test Unicode titles instead of plain ascii.
   [hannosch]

 * Added review state coloring to atct_topic_view. This closes